@@ -232,3 +232,6 @@ Henrik Niehaus
 
 Guy Martin
   for adding SVDRP commands to list and disconnect clients
+
+Martin1234
+  for suggesting a service call, returning the number of clients
