@@ -1,6 +1,7 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
  
+- added service call returning the number of clients (suggested by Martin1234)
 - added SVDRP commands to list and disconnect clients (thanks to Guy Martin)
 - fixed recplayer issues with large TS files (>4GB)
 - Don't abort externremux when internal read buffer is empty
